@@ -1,0 +1,5 @@
+patchversion="2.6.10-grsec"
+source="grsecurity-2.1.1-2.6.10-as2-200501242254.patch"
+source_url="http://www.grsecurity.com/${source}"
+appliedkernels="2.6.10"
+depends="patch-2.6.10-as2"
